@@ -2,18 +2,19 @@ package com.cinemate.frontend.client;
 
 import com.cinemate.frontend.domain.WatchSessionDto;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestTemplate;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
 public class WatchSessionClient {
 
+    private final RestTemplate restTemplate = new RestTemplate();
+    private final String backendUrl = "http://localhost:8080/api/sessions";
+
     public List<WatchSessionDto> fetchWatchSessions() {
-        return List.of(
-                new WatchSessionDto(1L, "Inception", "robert_dev", LocalDateTime.of(2025, 6, 10, 20, 0), "Planned"),
-                new WatchSessionDto(2L, "Pulp Fiction", "anita_film", LocalDateTime.of(2025, 6, 11, 21, 30), "Completed")
-        );
+        WatchSessionDto[] sessions = restTemplate.getForObject(backendUrl, WatchSessionDto[].class);
+        return Arrays.asList(sessions);
     }
 }
